[package]
name = "codegrep"
version = "0.1.0"
authors = ["George-Cristian Jiglau <george@mux.ro>"]
edition = "2018"

[dependencies]
anyhow = "1.0.34"
clap = { version = "3.0.0-beta.2", default-features = false, features = [ "derive", "std" ] }
futures = "0.3.8"
regex = "1.4.2"
reqwest = { version = "0.10.9", default-features = false, features = [ "rustls-tls", "gzip", "json" ] }
serde = { version = "1.0.117", features = [ "derive" ]}
tokio = { version = "0.2", features = ["full"] }
url = "2.2.0"
htmlescape = "0.3.1"
terminfo = "0.7.3"
lazy_static = "1.4.0"

[profile.release]
codegen-units = 1
lto = true
